corrected link to new name

--- a/templates/home.html
+++ b/templates/home.html
@@ -91,7 +91,7 @@
     <div class="hero-image hillshade">
       <div class="hero-text">
         <h1 style="font-size:50px">Projects</h1>
-        <h4><a href="{% url 'explore_soils' %}">Exploring soils in depth</a>: easily view SSURGO data properties</h4>
+        <h4><a href="{% url 'soils_in_depth' %}">Exploring soils in depth</a>: easily view SSURGO data properties</h4>
         <h4><a href="{% url 'kanopy_upload' %}">Green CovR</a>: portal for submitting cover crop photos</h4>
       </div>
     </div>    
