--- a/kanopy/templates/kanopy/kanopy_display_map.html
+++ b/kanopy/templates/kanopy/kanopy_display_map.html
@@ -65,6 +65,8 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
 <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script>
 
+    var pct_formatter = d3.format(".1%");
+
     mapLink =
         '<a href="http://www.esri.com/">Esri</a>';
     wholink =
@@ -106,7 +108,7 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
             controlsdiv.style.height = '450px';
             controlsdiv.style.background = 'white';
             controlsdiv.id = "controls";
-            controlsdiv.innerHTML = '<button id="info-button">Info</button><p>Select property</p><select id="PropertySelection" class="PropSelector"><option value="fgcc_value">FGCC</option><option value="gdd">Growing degree days</option></select><div id="legend"><svg width="260px" height="250px"></svg></div><p>Select property</p><select id="ZoomSelection" class="ZoomSelect"><option value="15">15</option><option value="14">14</option><option value="13">13</option><option value="12">12</option><option value="11">11</option><option value="10">10</option></select>';
+            controlsdiv.innerHTML = '<button id="info-button">Info</button><p>Select property</p><select id="PropertySelection" class="PropSelector"><option value="fgcc_value">Percent Green Canopy</option><option value="gdd">Growing degree days</option></select><div id="legend"><svg width="260px" height="250px"></svg></div><p>Select property</p><select id="ZoomSelection" class="ZoomSelect"><option value="15">15</option><option value="14">14</option><option value="13">13</option><option value="12">12</option><option value="11">11</option><option value="10">10</option></select>';
 
 
             $(controlsdiv).mousedown(function () {
@@ -134,7 +136,7 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
 
     function onEachFeature(feature, layer) {
         var popupContent = "<dt>Cover crop</dt> <dd>" + feature.properties.cover_crop_species_1 + "</dd>" +
-            "<dt>FGCC value</dt> <dd>" + feature.properties.fgcc_value + "</dd>" +
+            "<dt>Percent Green Canopy Cover</dt> <dd>" + pct_formatter(feature.properties.fgcc_value) + "</dd>" +
             "<dt>Planting date</dt> <dd>" + feature.properties.cover_crop_planting_date + "</dd>" +
             "<dt>Cumulative growing degree days</dt> <dd>" + feature.properties.gdd + "</dd>" +
             "<dt>Photo</dt> <dd>" + '<img src="' + feature.properties.image_url + '" width="250" height="250">' + "</dd>"
@@ -223,6 +225,7 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
             .cells(6)
             // .orient("horizontal")
             .scale(myscale)
+            .labelFormat(d3.format(".0%"))
         // .shapePadding(4)
 
         if (threshold) {
@@ -257,8 +260,8 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
     function showInfoWindow() {
         var winInfo = L.control.window(map,
             {
-                title: 'Green Covr Map',
-                content: 'This map allows a geographic exploration of points collected by MOSH and partners of cover crops around the state of MN.',
+                title: 'MOSH Cover crop growth data project',
+                content: 'Click on data points to view the amount of green cover produced by cover crops. See analysis of these data and details about the project at mosh.umn.edu',
                 visible: true
             })
     }
