update href to mosh

--- a/kanopy/templates/kanopy/kanopy_display_map.html
+++ b/kanopy/templates/kanopy/kanopy_display_map.html
@@ -261,7 +261,7 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
         var winInfo = L.control.window(map,
             {
                 title: 'MOSH Cover crop growth data project',
-                content: 'Click on data points to view the amount of green cover produced by cover crops. See analysis of these data and details about the project at mosh.umn.edu',
+                content: 'Click on data points to view the amount of green cover produced by cover crops. See analysis of these data and details about the project at <a href="https://mosh.umn.edu">mosh.umn.edu</a>',
                 visible: true
             })
     }
