updated mosh website link; added in mosh logo

--- a/kanopy/templates/kanopy/model_form_upload.html
+++ b/kanopy/templates/kanopy/model_form_upload.html
@@ -40,7 +40,7 @@
         {% endif %}
         <p>
           Thank you for submitting a cover crop ground cover photo to the MN Office for Soil Health (<a
-            href="mosh.umn.edu">MOSH</a>) Green CovR database.
+            href="https://mosh.umn.edu">MOSH</a>) Green CovR database.
           The app was developed in the Wilson Lab for manure management and water quality.
           MOSH will use this data anonymously to evaluate how successful cover crops are when planted in different
           contexts.
